[package]
name = "component-model"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
axum = "0.6.4"
tokio = { version = "1.25.0", features = ["full"] }
wasmtime = { git = "https://github.com/bytecodealliance/wasmtime", rev = "c8fa1b845feb9c6c898093eb071e4df848a5ed69", features = ["component-model"] }
